--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -4,11 +4,11 @@
       {"id":1, "name": "html", "imgFileName": "html.svg"},
       {"id":2, "name": "css", "imgFileName": "css.svg"},
       {"id":3, "name": "bootstrap", "imgFileName": "bootstrap.svg"},
-      {"id":3, "name": "tailwind", "imgFileName": "tailwind.svg"},
-      {"id":2, "name": "javascript", "imgFileName": "javascript.svg"},
-      {"id":2, "name": "ES6", "imgFileName": "ES6.svg"},
-      {"id":3, "name": "react", "imgFileName": "react.svg"},
-      {"id":4, "name": "vue", "imgFileName": "vue.svg"}
+      {"id":4, "name": "tailwind", "imgFileName": "tailwind.svg"},
+      {"id":5, "name": "javascript", "imgFileName": "javascript.svg"},
+      {"id":6, "name": "ES6", "imgFileName": "ES6.svg"},
+      {"id":7, "name": "react", "imgFileName": "react.svg"},
+      {"id":8, "name": "vue", "imgFileName": "vue.svg"}
 
     ],
     "backEnd": [
@@ -20,7 +20,8 @@
       {"id":1, "name": "figma", "imgFileName": "figma.svg"},
       {"id":2, "name": "adobe XD", "imgFileName": "AdobeXD.svg"},
       {"id":3, "name": "illusterator", "imgFileName": "AdobeIllustrator.svg"},
-      {"id":3, "name": "photoshop", "imgFileName": "AdobePhotoshop.svg"}
+      {"id":4, "name": "photoshop", "imgFileName": "AdobePhotoshop.svg"},
+      {"id":5, "name": "after effects", "imgFileName": "AdobeAfterEffects.svg"}
     
     ],
     "other": [
